# meeting-stt

./: .env  .env.example  .env.observability  README.md  README.observability.md  docker-compose.observability.yml  docker-compose.yml  env.example  main.py  pyproject.toml
app/: main.py
app/config/: __init__.py  db.py  logging.py  settings.py
app/models/: __init__.py  meeting.py  models.py
app/prompt/: summary_system_prompt.txt
app/repository/: meeting_respository.py
app/routers/: admin_stt.py  meetings.py  root.py
app/service/: meeting_service.py  stt_service.py  summary_service.py
app/static/css/: main.css
app/static/html/: index.html
app/static/js/: meetings_ui.js  recorder.js
docs/: azure-speech-overview.md  stt-debug-2025-12-04.md
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
